Created and loaded components
Added hero section video and updated navbar and removed most of unnecessary text

--- a/src/assets/scss/theme/_theme.scss
+++ b/src/assets/scss/theme/_theme.scss
@@ -5,6 +5,7 @@
 @import "background";
 @import "colored-links";
 @import "type";
+@import "hero";
 @import "forms";
 @import "buttons";
 @import "animations";
