--- a/src/assets/scss/_theme-colors.scss
+++ b/src/assets/scss/_theme-colors.scss
@@ -1,6 +1,6 @@
 // Theme Colors
-$sky: #5eb9f0 !default;
-$blue: #3f78e0 !default;
+$sky: #7cc0ff !default;
+$blue: #1a73e8 !default;
 $grape: #605dba !default;
 $purple: #747ed1 !default;
 $violet: #a07cc5 !default;
